# soft_eng_examples

./: README.md
Assignment_1/: assignment.odt
Assignment_2/CPP_Builder/: DominosBuilder.cpp  DominosBuilder.h  LittleCaesarsBuilder.cpp  LittleCaesarsBuilder.h  Pizza.cpp  Pizza.h  PizzaBuilder.h  PizzaDesc.cpp  PizzaDesc.h  PizzaEmployee.cpp  PizzaEmployee.h  PizzaGenericBuilder.cpp  PizzaGenericBuilder.h  PizzaHutBuilder.cpp  PizzaHutBuilder.h  build_and_run.sh  main.cpp
Assignment_2/CPP_Factory/: AbstractFactory.h  AirbusFactory.h  Airplane.h  BertramFactory.h  Boat.h  BoeingFactory.h  Build.h  Car.h  EmbraerFactory.h  HondaAccord.h  HondaCRV.h  HondaFactory.h  MastercraftFactory.h  PorcheBoxster.h  PorcheCayman.h  PorcheFactory.h  Repair.h  Restore.h  SearayFactory.h  TeslaFactory.h  TeslaS.h  TeslaX.h  Vehicle.h  VehicleProducer.h  build_and_run.sh  main.cpp
Assignment_3/cpp/bridge/: CMakeLists.txt  FacebookMessagingApp.cpp  FacebookMessagingApp.h  ImageMessage.cpp  ImageMessage.h  MessageType.h  MessengingApp.h  TelegramMessagingApp.cpp  TelegramMessagingApp.h  TextMessage.cpp  TextMessage.h  VideoMessage.cpp  VideoMessage.h  WhatsAppMessagingApp.cpp  WhatsAppMessagingApp.h  main.cpp
Assignment_4/cpp/flyweight/: CMakeLists.txt  Document.cpp  Document.h  FlyWeightText.cpp  FlyWeightText.h  Text.cpp  Text.h  TextType.cpp  TextType.h  driver.cpp
Assignment_4/cpp/proxy/: CMakeLists.txt  ISongService.h  Metadata.h  Song.cpp  Song.h  SongProxyServer.cpp  SongProxyServer.h  SongServer.cpp  SongServer.h  driver.cpp
adapter_design/: adapter_design_source.docx  ~$apter_design_source.docx
adapter_design/src/: CardExpiration.java  Main.java  PaypalGateway.java  (+4 more)
(+124 files in other folders)
